# contratos

./: .gitignore  FiltroClientes.xlsx  Pipfile  README.md  aulas.py  aulas_bak.py  db.py  judo valores.xlsx  judo.xlsx  judo_jan_2025.xlsx  judo_jan_valores.csv  judo_valores_csv.csv  pyproject.toml  requirements.txt  start.sh  treino.json  treino_copia.json  utils.py
judo/: judo_ago_2025.csv  judo_ago_2025.html  judo_ago_2025.xlsx  judo_fev_2025.html  judo_jul_2025.csv  judo_jul_2025.html  judo_jul_2025.xlsx  judo_jun_2025.csv  judo_jun_2025.html  judo_jun_2025.xlsx  judo_mai_2025.csv  judo_mai_2025.html  judo_mai_2025.xlsx  judo_mar_2025.csv  judo_mar_2025.xlsx  judo_out_2025.csv  judo_out_2025.html  judo_out_2025.xlsx  judo_set_2025.csv  judo_set_2025.html  judo_set_2025.xlsx
krav/: krav_out_2025.xlsx
kravmaga/: krav_ago_2025.xlsx  krav_jul_2025.xlsx  krav_mai_2025.xlsx  krav_mar_2025.xlsx  krav_set_2025.csv  krav_set_2025.xlsx  kravmaga_jun_2025.xlsx  kravmaga_mai_2025.csv  kravmaga_mar_2025.csv
muay/: muai_jun_2025.csv  muai_jun_2025.xlsx  muai_mai_2025.xlsx  muay_ago_2025.csv  muay_ago_2025.xlsx  muay_jul_2025.csv  muay_jul_2025.xlsx  muay_mai_2025.csv  muay_mar_2025.csv  muay_mar_2025.xlsx  muay_out_2025.xlsx  muay_set_2025.csv  muay_set_2025.xlsx
pages/: 0_Importar.py  1_Judo.py  2_Pilates.py  3_Prime.py  4_Muay.py  5_kravmaga.py  __init__.py
pilates/: judo_fev_2025.html  pilates_abr_2025.csv  pilates_abr_2025.xlsx  pilates_ago_2025 copy.xlsx  pilates_ago_2025.csv  pilates_ago_2025.xlsx  pilates_clara_abr_2025.csv  pilates_clara_ago _2025.csv  (+25 more)
(+13 files in other folders)
